@@ -70,6 +70,8 @@ public class StdArmor extends StdContainer implements Armor
 	public boolean canWear(MOB mob, long where)
 	{
 		if(where==0) return (whereCantWear(mob)==0);
+		if((rawProperLocationBitmap()&where)!=where)
+			return false;
 		return mob.freeWearPositions(where,getClothingLayer(),getLayerAttributes())>0;
 	}
 	
