@@ -2233,11 +2233,13 @@ this will wake them up.
 
 WEAR=\
 Command : WEAR\n\r\
-Usage   : WEAR (ALL) [ITEM NAME]\n\r\
+Usage   : WEAR (ALL) [ITEM NAME] (ON [LOCATION])\n\r\
 Example : wear shirt\n\r\
+Example : wear shirt on torso\n\r\
 Short(s): \n\r\
 This command will attempt to place the specified item onto the \
-proper location on your body.  
+proper location on your body.  If a location is specified, the \
+player will attempt to wear the item on that location.  
 
 WEATHER=\
 Command : WEATHER\n\r\
