@@ -2207,3 +2207,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 11.Several new Oracle Prayers added for sensing the skills of others
 12.Behaviors ItemRefitter,ItemMender,ItemIdentifier have COST parameter now.
 13.New DISABLE flag: EQUIPSIZE
+14.WEAR command now supports specified wear locations.
